--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^4.5.1",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1"
   },
