--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
+    "@uiw/react-color": "^2.5.5",
     "next": "14.0.4",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hotkeys-hook": "^4.5.1",
     "react-icons": "^5.3.0",
+    "react-pick-color": "^2.0.0",
     "tailwind-merge": "^2.2.0",
     "uuid": "^9.0.1"
   },
