--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uiw/react-color": "^2.5.5",
     "next": "14.0.4",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
