--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@uiw/react-color": "^2.5.5",
-    "next": "14.0.4",
-    "react": "^18",
+    "next": "15.3.4",
+    "react": "19.1.0",
     "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18",
+    "react-dom": "19.1.0",
     "react-hotkeys-hook": "^4.5.1",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.2.0",
@@ -27,14 +27,18 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "15.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
