--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@uiw/react-color": "^2.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
