--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "react-hotkeys-hook": "^4.5.1",
     "react-icons": "^5.3.0",
     "recharts": "^3.0.0",
+    "slate": "^0.117.2",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
