--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-table": "^8.21.3",
     "@uiw/react-color": "^2.5.5",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
